--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   json_annotation: any
   http: any
   url_launcher: any
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  stream_transform: ^2.1.0
+  bloc_concurrency: ^0.2.3
+  path_provider: ^2.1.1
+  uuid: ^4.2.2
+  flutter_staggered_grid_view: ^0.4.0
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   build_runner: any
