--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   uuid: ^4.2.2
   flutter_staggered_grid_view: ^0.4.0
   cached_network_image: ^3.3.0
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   build_runner: any
